DAPI-207: Fix grid css remove overflow hidden

--- a/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/grid/Grid.less
+++ b/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/grid/Grid.less
@@ -124,6 +124,15 @@
       text-overflow: ellipsis;
     }
 
+    &--highlightWithTooltip {
+      color: @AknLightPurple;
+      font-style: italic;
+      font-size: @AknFontSizeBig;
+      white-space: nowrap;
+      max-width: 15vw;
+      text-overflow: ellipsis;
+    }
+
     &--big {
       font-size: @AknFontSizeBig;
     }
